--- a/exercicios/modulo003/ex001/index.html
+++ b/exercicios/modulo003/ex001/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Teste de Imagem de Fundo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="quadrado" id="q1">
+
+    </div>
+    <div class="quadrado" id="q2">
+
+    </div>
+    <div class="quadrado" id="q3">
+
+    </div>
 </body>
 </html>
