--- a/desafios/desafio011-corrigido/index.html
+++ b/desafios/desafio011-corrigido/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <p>site criado por <a href="#" target="_blank">gustavo guanabara</a> para o <a href="#" target="_blank">curso em video</a>.</p>
+        <p>site criado por <a href="#" target="_blank">Hugostoso</a>.</p>
     </footer>
 </body>
 </html>
