--- a/exercicios/modulo004/ex001/iframe002.html
+++ b/exercicios/modulo004/ex001/iframe002.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe</title>
+
+    <style>
+        iframe{
+            display: block;
+            margin: 0 auto;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, illo deserunt! Dicta nesciunt optio repellat provident vel voluptatibus inventore mollitia tenetur, nihil atque. Quo ipsum, labore pariatur repellat fugiat eum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ut reprehenderit corporis a quos! Dolor sunt minima facilis, quasi consectetur totam corrupti ipsam distinctio reiciendis inventore illum, accusantium consequatur nemo!</p>
 
-    <iframe src="" frameborder="0" height="500px" width="500px">
+    <iframe src="tabela001.html" frameborder="0" height="500px" width="500px">
 
     </iframe>
     <iframe src="" frameborder="0">
