--- a/exercicios/modulo004/ex001/tabela001.html
+++ b/exercicios/modulo004/ex001/tabela001.html
@@ -59,7 +59,7 @@
 
         <tbody>
             <tr>
-                <td>são paulo</td>
+                <td>São Paulo</td>
                 <td class="num">45.919.049</td>
             </tr>
             <tr>
