--- a/exercicios/modulo004/ex001/iframe002.html
+++ b/exercicios/modulo004/ex001/iframe002.html
@@ -7,9 +7,10 @@
     <title>iframe</title>
 
     <style>
+
         iframe{
             display: block;
-            margin: 0 auto;
+            margin: auto;
         }
 
     </style>
@@ -19,12 +20,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, illo deserunt! Dicta nesciunt optio repellat provident vel voluptatibus inventore mollitia tenetur, nihil atque. Quo ipsum, labore pariatur repellat fugiat eum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ut reprehenderit corporis a quos! Dolor sunt minima facilis, quasi consectetur totam corrupti ipsam distinctio reiciendis inventore illum, accusantium consequatur nemo!</p>
 
     <iframe src="tabela001.html" frameborder="0" height="500px" width="500px">
-
+        <p>Infelizmente o seu navegador não é feito para isso.</p>
     </iframe>
-    <iframe src="" frameborder="0">
-
-    </iframe>
-
+    
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis illo sequi vero, modi, nihil placeat ea, molestiae consequatur repellendus reprehenderit iste temporibus! Quibusdam dolores, eius consectetur explicabo provident fuga expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt quisquam vero itaque assumenda nisi, quia quaerat et odit adipisci expedita necessitatibus corporis ad quam suscipit ullam omnis beatae nam.</p>
 </body>
 </html>
