--- a/exercicios/modulo004/ex001/iframe003.html
+++ b/exercicios/modulo004/ex001/iframe003.html
@@ -10,6 +10,10 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        ul li{
+            list-style: none;
+        }
+
         #tela{
             width: 55vw;
             height: 400px;
